--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -3,10 +3,7 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutofTuong.cshtml";
-    var now = DateTime.Parse("2023-12-05");
-    var tenMoreDays = now.AddDays(10);
-    var nowString = now.ToString("yyyy-MM-dd");
-    var tenMoreDaysString = tenMoreDays.ToString("yyyy-MM-dd");
+    var now = DateTime.Now;
 }
 
 <div class="banner">
@@ -112,33 +109,33 @@
     </div>
 </div>
 <section class="row pt-4 mx-0 mb-3">
-    <h2 class="mt-2 text-center">IRCTC Train Ticket Booking on ixigo</h2>
+    <h2 class="mt-2 text-center">VietNam Train Ticket Booking on Ease </h2>
     <div class="text-center mt-2">
         <h4 class="text-center">IRCTC Authorised Partner</h4>
     </div>
     <div class="col-lg-8 col-md-10 col-12 mx-auto row mt-4">
         <div class="col-6 d-flex flex-row align-items-center">
-            <img src="https://images.ixigo.com/image/upload/train/ecb835b55223186c49d55750b422ed10-oscpe.png" width="70" height="70" />
+            <img src="~/images/svg/icon1.png" width="70" height="70" />
             <div class="ms-4">
-                <h5>0 VND Payment Gateway Fee on Payments via UPI</h5>
+                <h5>0 VND Payment Gateway Fee</h5>
             </div>
         </div>
         <div class="col-6 d-flex flex-row align-items-center">
-            <img src="https://images.ixigo.com/image/upload/801ca10aa0964d95bdcd76df1573b5e1-hlzsy.png" width="70" height="70" />
+            <img src="~/images/svg/icon2.png" width="70" height="70" />
             <div class="ms-4">
-                <h5>ixigo Assured: Free Cancellation of Train Tickets</h5>
+                <h5>Ease Train Assured: Free Cancellation of Train Tickets</h5>
             </div>
         </div>
         <div class="col-6 d-flex flex-row align-items-center">
-            <img src="https://images.ixigo.com/image/upload/train/a21427142a38e7331574b034aa4a687a-lwpxr.png" width="70" height="70" />
+            <img src="~/images/svg/icon3.png" width="70" height="70" />
             <div class="ms-4">
                 <h5>Instant Refund on VietNam Railway Reservation Cancellation</h5>
             </div>
         </div>
         <div class="col-6 d-flex flex-row align-items-center">
-            <img src="https://images.ixigo.com/image/upload/train/d522fcf3866c18b343060ab3cb49b3b1-xnmqx.png" width="70" height="70" />
+            <img src="~/images/svg/icon4.png" width="70" height="70" />
             <div class="ms-4">
-                <h5>24*7 Support for IRCTC Train Ticket Booking</h5>
+                <h5>24*7 Support for Ease Train Ticket Booking</h5>
             </div>
         </div>
     </div>
@@ -151,7 +148,7 @@
             <h2 class="text-center text-orange">More Train Information</h2>
             <div class="row">
                 <div class="mt-3 col-12 row">
-                    <a href="https://www.ixigo.com/trains/train-seat-availability" class="card text-decoration-none col-3 mx-auto text-secondary">
+                    <a asp-action="TrainSeatAvailability" class="card text-decoration-none col-3 mx-auto text-secondary">
                         <div class="card-body">
                             <div class="d-flex flex-row">
                                 <img src="https://images.ixigo.com/image/upload/trains/86db5d79396ba8e8be30ae63b1c9961e-eeaul.png" height="56" width="56" />
@@ -182,7 +179,7 @@
                                      height="56" width="56" />
                                 <div class="ms-2">
                                     <div class="">Train Running Status</div>
-                                    <div class="">Check IRCTC live train running status</div>
+                                    <div class="">Check live train running status</div>
                                 </div>
                             </div>
                         </div>
