--- a/Views/Railway/Search.cshtml
+++ b/Views/Railway/Search.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Search";
     Layout = "~/Views/Shared/_LayoutofTuong.cshtml";
     var now = DateTime.Now;
-    var tenMoreDays = now.AddDays(10);
-    var nowString = now.ToString("yyyy-MM-dd");
-    var tenMoreDaysString = tenMoreDays.ToString("yyyy-MM-dd");
     List<DateTime> week1 = new List<DateTime>{now};
+
     for(int i = 1; i<=(int) now.DayOfWeek -1 ;i++)
     {
         week1.Add(now.AddDays(-i));
@@ -17,7 +15,6 @@
         week1.Add(now.AddDays(j));
     }
     week1.Sort();
-    
 }
 
 <div class="bg-gradient-cus">
@@ -35,8 +32,8 @@
             </div>
             <div class="col-sm-2">
                 <label for="ngayXP" class="form-label text-white-50 fw-500" style="font-size:12px">Date</label>
-                <input type="date" class="form-control" id="ngayXP" asp-for="@Model.StartDate" 
-                    style="border-bottom:solid 1px white; border-top:0; border-left:0; border-right:0;" />
+                <input type="date" class="form-control" id="ngayXP" asp-for="@Model.StartDate" asp-format="{0:MM/dd/yyyy}"
+                       style="border-bottom:solid 1px white; border-top:0; border-left:0; border-right:0;" />
             </div>
             <div class="d-flex flex-row justify-content-center align-items-center col-sm-2">
                 <button type="submit" class=" text-uppercase btn btn-orange" style="width:120px">
@@ -56,7 +53,7 @@
                     <input type="hidden" asp-for="StartDate" />
                 </div>
                 <div class="w-25" style="border-right:1px dashed rgba(0,0,0,.12)">
-                    <div class="mb-2">Class Coaches</div>
+                <div class="mb-2">Coach Classes</div>
                     <div class="d-inline-flex p-2">
                         <div class="d-flex flex-row flex-wrap">
                             @foreach (var c in ViewBag.ClassList)
@@ -153,7 +150,9 @@
             {
                 @foreach (var schedule in Model.Schedules)
                 {
-                    <div class="mt-4">
+                    if(schedule.Route!=null && schedule.Route.RouteDetails !=null & schedule.Route.RouteDetails.Count() >= 1)
+                    {
+                        <div class="mt-4">
                         <div class="card p-2">
                             <div class="card-body">
                                 <div class="d-inline-flex w-100">
@@ -384,6 +383,8 @@
                             </div>
                         </div>
                     </div>
+                    }
+                    
                 }
             }
         </div>
