--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -111,28 +111,28 @@
 <section class="row pt-4 mx-0 mb-3">
     <h2 class="mt-2 text-center">VietNam Train Ticket Booking on Ease </h2>
     <div class="text-center mt-2">
-        <h4 class="text-center">IRCTC Authorised Partner</h4>
+        <h4 class="text-center">Authorised Partner</h4>
     </div>
-    <div class="col-lg-8 col-md-10 col-12 mx-auto row mt-4">
+    <div class="col-lg-8 col-md-10 col-12 mx-auto row mt-4 mb-3">
         <div class="col-6 d-flex flex-row align-items-center">
             <img src="~/images/svg/icon1.png" width="70" height="70" />
             <div class="ms-4">
                 <h5>0 VND Payment Gateway Fee</h5>
             </div>
         </div>
-        <div class="col-6 d-flex flex-row align-items-center">
+        <div class="col-6 d-flex flex-row align-items-center mb-3">
             <img src="~/images/svg/icon2.png" width="70" height="70" />
             <div class="ms-4">
                 <h5>Ease Train Assured: Free Cancellation of Train Tickets</h5>
             </div>
         </div>
-        <div class="col-6 d-flex flex-row align-items-center">
+        <div class="col-6 d-flex flex-row align-items-center mb-3">
             <img src="~/images/svg/icon3.png" width="70" height="70" />
             <div class="ms-4">
                 <h5>Instant Refund on VietNam Railway Reservation Cancellation</h5>
             </div>
         </div>
-        <div class="col-6 d-flex flex-row align-items-center">
+        <div class="col-6 d-flex flex-row align-items-center mb-3">
             <img src="~/images/svg/icon4.png" width="70" height="70" />
             <div class="ms-4">
                 <h5>24*7 Support for Ease Train Ticket Booking</h5>
