--- a/Views/Booking/ConfirmInformation.cshtml
+++ b/Views/Booking/ConfirmInformation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Railway_Group01.Models.ViewModels.ConfirmInformationViewModel;
+﻿@model Railway_Group01.Data.Booking;
 @{
     ViewData["Title"] = "CONFIRM BOOKING INFORMATION";
     Layout = "~/Views/Shared/_LayoutofTuong.cshtml";
@@ -36,9 +36,9 @@
     <section class="mb-3">
         <h6 class="text-orange">TICKET BOOKER INFORMATION</h6>
         <div>
-            <p> - Full name: <span class="fw-bold">@Model.User!.UserName</span></p>
-            <p> - Phone number: <span class="fw-bold">@Model.User.PhoneNumber</span></p>
-            <p> - Email: <span class="fw-bold">@Model.User.Email</span></p>
+            <p> - Full name: <span class="fw-bold">@Model.User?.UserName</span></p>
+            <p> - Phone number: <span class="fw-bold">@Model.User?.PhoneNumber</span></p>
+            <p> - Email: <span class="fw-bold">@Model.User?.Email</span></p>
             <p> - Payment method: <span class="fw-bold">Online payment with PayPal</span></p>
         </div>
     </section>
@@ -56,23 +56,23 @@
                 </tr>
             </thead>
             <tbody>
-                @if (Model != null && Model.InfoList != null && Model.InfoList.Count > 0)
-                    foreach (var item in Model.InfoList)
+                @if (Model != null && Model.BookingDetails != null && Model.BookingDetails.Count > 0)
+                    foreach (var item in Model.BookingDetails)
                     {
                         <tr>
                             <td class="text-center">@(cnt++)</td>
                             <td>
-                                <p>Full name: @item.Name</p>
-                                <p>Age: @item.PassengerType</p>
-                                <p>Citizen Number: @item.ID</p>
-                                <p>Bithday: @item.Birthday</p>
+                                <p>Full name: @item.Passenger?.Name</p>
+                                <p>Age: @item.Passenger?.PassengerType?.Name</p>
+                                <p>Citizen Number: @item.Passenger?.ID</p>
+                                <p>Birthday: @item.Passenger?.Birthday.Date.ToString("MM/dd/yyyy")</p>
                             </td>
                             <td class="small text-center">
-                                @item.ScheduleName <br />
+                                @item.Schedule?.Name <br />
                                 @item.Trip <br />
-                                @item.StartAt<br />
-                                Coach: @item.CoachNo, Cabin @item.Cabin, Seat @item.SeatNo<br />
-                                Class: @item.CoachClassName<br />
+                                @item.Schedule?.Departure<br />
+                                Coach: @item.Seat?.Coach?.CoachNo, Cabin @item.Seat?.CompartmentNo, Seat @item.Seat?.SeatNo<br />
+                                Class: @item.Seat?.Coach?.Class?.Name<br />
                             </td>
                             <td class="text-center">
                                 @item.Price.ToString("0.00")
@@ -81,7 +81,7 @@
                     }
                 <tr class="table-info">
                     <td colspan="3"><p class="text-end fw-bold">Total</p></td>
-                    <td class="text-center">@(Model.GrandTotal.ToString("0.00"))</td>
+                    <td class="text-center">@(Model?.BookingDetails?.Sum(b => b.Price).ToString("0.00"))</td>
                 </tr>
             </tbody>
         </table>
@@ -90,7 +90,7 @@
     <section>
         <div class="d-flex justify-content-between">
             <a asp-action="Index" class="btn btn-orange fw-bold">👈 Fill again</a>
-            <a asp-action="MakePayment" asp-route-id="@Model.BookingId" class="btn btn-orange fw-bold">Make Payment 👉</a>
+            <a asp-action="MakePayment" asp-route-id="@Model?.Id" class="btn btn-orange fw-bold">Make Payment 👉</a>
         </div>
     </section>
 </div>
