--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -28,6 +28,11 @@
                     <span class="text-uppercase fw-700">Search Station</span>
                 </button>
             </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link tb-link rounded-0" data-bs-toggle="tab" data-bs-target="#searchTicketPnr" type="button" role="tab" aria-controls="searchTicketPnr" aria-selected="false">
+                    <span class="text-uppercase fw-700">Search Ticket</span>
+                </button>
+            </li>
         </ul>
         <div class="tab-content z-2 bg-white pt-3 px-4" id="myTabContent" style="height: 200px;width: 800px;border-radius: 0 0 4px 4px;">
             <div id="trainSearchForm" class="tab-pane fade show active w-100" role="tabpanel" tabindex="0">
@@ -105,6 +110,32 @@
                     </div>
                 </div>
             </div>
+            <div id="searchTicketPnr" class="tab-pane fade w-100 " role="tabpanel" tabindex="0">
+                <div class="row">
+                    <div class="col-5">
+                        <img src="https://images.ixigo.com/rt-train/pc/img/trainsHome/pnr.png" />
+                        <div class="">
+                            <div class="">Ticket Status </div>
+                            <small class="text-secondary">
+                                Know current status of your Train ticket and chances of W/L confirmation.
+                            </small>
+                        </div>
+                    </div>
+                    <div class="col-7">
+                        <form class="row" asp-action="TicketBookingSeach" method="get">
+                            <div class="col-md-9">
+                                <label for="station" class="form-label">PNR NUMBER</label>
+                                <input class="form-control" type="text" name="TicketPNR" placeholder="Enter your pnr number" required />
+                            </div>
+                            <div class="col-3 align-self-end">
+                                <button class="btn btn-orange " type="submit">
+                                    Search
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -151,31 +182,29 @@
                     <a asp-action="TrainSeatAvailability" class="card text-decoration-none col-3 mx-auto text-secondary">
                         <div class="card-body">
                             <div class="d-flex flex-row">
-                                <img src="https://images.ixigo.com/image/upload/trains/86db5d79396ba8e8be30ae63b1c9961e-eeaul.png" height="56" width="56" />
+                                <img src="~/images/svg/iconseat.png" height="56" width="56" />
                                 <div class="ms-2">
                                     <div class="">Train Seat Availability</div>
                                     <div class="">Check train seat availability online</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="interlink__icon"><span class="ixi-icon-chevron"></span></div>
                     </a>
-                    <a href="https://www.ixigo.com/pnr-status-enquiry" class="card text-decoration-none col-3 mx-auto text-secondary">
+                    <a asp-action="TicketBookingSeach" class="card text-decoration-none col-3 mx-auto text-secondary">
                         <div class="card-body">
                             <div class="d-flex flex-row">
-                                <img src="https://images.ixigo.com/image/upload/trains/2e704451e3551cf6f85c8f5d08c3e1f8-vangr.png" height="56" width="56" />
+                                <img src="~/images/svg/iconticket.png" height="56" width="56" />
                                 <div class="ms-2">
                                     <div class="">PNR Status Enquiry</div>
                                     <div class="">Check PNR Status &amp; ticket booking</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="interlink__icon"><span class="ixi-icon-chevron"></span></div>
                     </a>
-                    <a href="https://www.ixigo.com/trains/train-running-status" class="card text-decoration-none col-3 mx-auto text-secondary">
+                    <a asp-action="TrainRunningSearch" class="card text-decoration-none col-3 mx-auto text-secondary">
                         <div class="card-body">
                             <div class="d-flex flex-row">
-                                <img src="https://images.ixigo.com/image/upload/trains/10dcd8077f244965638a6a483b97451f-umnfy.png"
+                                <img src="~/images//svg/icontrain.png"
                                      height="56" width="56" />
                                 <div class="ms-2">
                                     <div class="">Train Running Status</div>
@@ -183,47 +212,21 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="interlink__icon"><span class="ixi-icon-chevron"></span></div>
+                    </a>
+                    <a asp-action="StationStatusSearch" class="card text-decoration-none col-3 mx-auto text-secondary">
+                        <div class="card-body">
+                            <div class="d-flex flex-row">
+                                <img src="~/images/svg/iconstation.png"
+                                     height="56" width="56" />
+                                <div class="ms-2">
+                                    <div class="">Station Schedule</div>
+                                    <div class="">Check Schedule of Station</div>
+                                </div>
+                            </div>
+                        </div>
                     </a>
                 </div>
-                <div class="mt-3 col-12 row">
-                    <a href="https://www.ixigo.com/trains/irctc-cancellation-charges-icms" class="card text-decoration-none col-3 mx-auto text-secondary">
-                        <div class="card-body">
-                            <div class="d-flex flex-row">
-                                <img src="https://images.ixigo.com/image/upload/trains/555412c877f9225e51b40c6b28e40410-rxehn.png" height="56" width="56" />
-                                <div class="ms-2">
-                                    <div class="">IRCTC Cancellation Chargess</div>
-                                    <div class="">Cancellation Rules for Train Tickets</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="interlink__icon"><span class="ixi-icon-chevron"></span></div>
-                    </a>
-                    <a href="https://www.ixigo.com/trains/tatkal-railway-reservation" class="card text-decoration-none col-3 mx-auto text-secondary">
-                        <div class="card-body">
-                            <div class="d-flex flex-row">
-                                <img src="https://images.ixigo.com/image/upload/trains/551e245f7ea23fdd947331d0aeb1a4f8-stzha.png" height="56" width="56" />
-                                <div class="ms-2">
-                                    <div class="">VietNam Railway Reservation</div>
-                                    <div class="">Book tatkal train tickets quikly</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="interlink__icon"><span class="ixi-icon-chevron"></span></div>
-                    </a>
-                    <a href="https://www.ixigo.com/trains/platform-locator" class="card text-decoration-none col-3 mx-auto text-secondary">
-                        <div class="card-body">
-                            <div class="d-flex flex-row">
-                                <img src="https://images.ixigo.com/image/upload/trains/trains/1d820492523e3c3b0bd47abaf76c3107-gwnxv.png" height="56" width="56" />
-                                <div class="ms-2">
-                                    <div class="">Train Platform Locator</div>
-                                    <div class="">Locate your train platform number</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="interlink__icon"><span class="ixi-icon-chevron"></span></div>
-                    </a>
-                </div>
+                
             </div>
         </div>
     </div>
