--- a/Views/Shared/_LayoutofTuong.cshtml
+++ b/Views/Shared/_LayoutofTuong.cshtml
@@ -111,7 +111,7 @@
                             </ul>                                           
                         <ul class="navbar-nav mb-2 mb-lg-0 d-flex flex-row">
                             <li class="nav-item">
-                                <a class="nav-link header-nav-link" data="5" href="">
+                                <a class="nav-link header-nav-link" data="5" asp-action="AboutUs" asp-controller="Railway">
                                     <span  >
                                         <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
                                             <g fill="none" fill-rule="evenodd">
