--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -38,21 +38,21 @@
             <div id="trainSearchForm" class="tab-pane fade show active w-100" role="tabpanel" tabindex="0">
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <form class="row" method="get" asp-action="Search">
-                        <div class="col-md-4 ">
+                        <div class="col-md-4 mb-3">
                             <label for="gaDi" class="form-label">From</label>
                             <select class="form-select" name="From" asp-items="@Model.SelectListItems" required></select>
 
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-3">
                             <label for="gaDen" class="form-label">To</label>
                             <select class="form-select" name="To" asp-items="@Model.SelectListItems" required></select>
                         </div>
-                        <div class="col-md-3 mx-auto">
+                        <div class="col-md-3 mx-auto mb-3">
                             <label for="ngayXP" class="form-label">Date</label>
                             <input type="date" class="form-control" id="ngayXP" asp-for="@Model.StartDate" required />
                         </div>
-                        <div class="col-12 mt-2">
-                            <button type="submit" class="text-uppercase btn btn-orange">
+                        <div class="col-12 mt-2 d-flex flex-row justify-content-around align-items-center">
+                            <button type="submit" class="text-uppercase btn btn-orange rounded-0 w-50 fw-700">
                                 Search
                             </button>
                         </div>
