--- a/wwwroot/css/tuongstyle.css
+++ b/wwwroot/css/tuongstyle.css
@@ -524,3 +524,13 @@ html {
     border-color: #EC5B24 !important;
     background-color: #FEEFEA !important;
 }
+.spinner-wrapper {
+    background-color: #fff;
+    position: fixed;
+    top: 65px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    transition: all 0.2s;
+}
