10/12 Tuong Push Code Merge branch Develop and fix  bug

--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -51,8 +51,8 @@
                             <label for="ngayXP" class="form-label">Date</label>
                             <input type="date" class="form-control" id="ngayXP" asp-for="@Model.StartDate" required />
                         </div>
-                        <div class="col-12 mt-2 d-flex flex-row justify-content-around align-items-center">
-                            <button type="submit" class="text-uppercase btn btn-orange rounded-0 w-50 fw-700">
+                        <div class="col-12 mt-2 ">
+                            <button type="submit" class="text-uppercase btn btn-orange rounded-0 fw-700">
                                 Search
                             </button>
                         </div>
