--- a/Views/Railway/Search.cshtml
+++ b/Views/Railway/Search.cshtml
@@ -35,8 +35,8 @@
                 <input type="date" class="form-control" id="ngayXP" asp-for="@Model.StartDate" asp-format="{0:MM/dd/yyyy}"
                        style="border-bottom:solid 1px white; border-top:0; border-left:0; border-right:0;" />
             </div>
-            <div class="d-flex flex-row justify-content-center align-items-center col-sm-2">
-                <button type="submit" class=" text-uppercase btn btn-orange" style="width:120px">
+            <div class="d-flex flex-row justify-content-center align-items-end col-sm-2">
+                <button type="submit" class=" text-uppercase btn btn-orange rounded-0 fw-700 text-light" style="width:150px">
                     Search
                 </button>
             </div>
@@ -124,7 +124,16 @@
                 </div>
                 <div class="w-25 ps-4 d-flex flex-column justify-content-around ">
                     <button class="btn btn-orange px-5 fw-800 w-75 rounded-0" type="submit">Filter</button>
-                    <button type="reset" class="btn btn-secondary w-75 px-5 fw-800 rounded-0">Reset</button>
+                    
+                    @if (ViewBag.TimeSelect != null || ViewBag.CoachTypeSelect.Count != 0|| ViewBag.SelectType !=null)
+                    {
+                        <a asp-action="Search" asp-route-From="@Model.From"
+                                               asp-route-To="@Model.To"
+                                               asp-route-StartDate="@Model.StartDate.ToString("yyyy-MM-dd")" class="btn btn-secondary w-75 px-5 fw-800 rounded-0">Reset</a>
+
+                    }else{
+                        <input type="reset"  class="btn btn-secondary w-75 px-5 fw-800 rounded-0"  value="Reset" />
+                    }
                 </div>
             </form>
     </div>
@@ -410,7 +419,7 @@
                                                                                 <div class="et-bed-illu"></div>
                                                                             </div>
                                                                         </div>
-                                                                        </div>
+                                                                    </div>
                                                                 }
                                                                 cabinNum++;
                                                             }
@@ -504,6 +513,7 @@
         const load = document.querySelector(".spinner-wrapper");
         setTimeout(() => {
             $(".spinner-wrapper").addClass("d-none");
-        }, 2600)
+        }, 2000)
+
     </script>
 }
